
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef union ccb {int dummy; } ccb ;
typedef int u_int8_t ;
typedef scalar_t__ u_int64_t ;
typedef int u_int32_t ;
typedef int u_int ;
struct cam_device {int dummy; } ;


 int AP_EXTEND ;
 int AP_FLAG_CHK_COND ;
 int AP_PROTO_NON_DATA ;
 int ATA_HPA_FEAT_MAX_ADDR ;
 int ATA_SET_MAX_ADDRESS ;
 int ATA_SET_MAX_ADDRESS48 ;
 int CAM_DIR_NONE ;
 int MSG_SIMPLE_Q_TAG ;
 int ata_do_cmd (struct cam_device*,union ccb*,int,int ,int ,int ,int ,int ,int ,scalar_t__,int,int *,int ,int,int) ;
 int atahpa_proc_resp (struct cam_device*,union ccb*,int *) ;

__attribute__((used)) static int
atahpa_set_max(struct cam_device *device, int retry_count,
       u_int32_t timeout, union ccb *ccb,
       int is48bit, u_int64_t maxsize, int persist)
{
 int error;
 u_int cmd;
 u_int8_t protocol;

 protocol = AP_PROTO_NON_DATA;

 if (is48bit) {
  cmd = ATA_SET_MAX_ADDRESS48;
  protocol |= AP_EXTEND;
 } else {
  cmd = ATA_SET_MAX_ADDRESS;
 }


 if (maxsize)
  maxsize--;

 error = ata_do_cmd(device,
      ccb,
      retry_count,
               CAM_DIR_NONE,
                  protocol,
                   AP_FLAG_CHK_COND,
                    MSG_SIMPLE_Q_TAG,
                 cmd,
                  ATA_HPA_FEAT_MAX_ADDR,
             maxsize,
                      persist,
                  ((void*)0),
                   0,
      timeout ? timeout : 1000,
      is48bit);

 if (error)
  return (error);

 return atahpa_proc_resp(device, ccb, ((void*)0));
}
